#2196 Embrace immutable collections